No longer space on each side of the content on mobile

--- a/index.css
+++ b/index.css
@@ -3,7 +3,8 @@ body {
   color: white;
   font-family: 'Sen', Arial, Helvetica, sans-serif;
   text-align: center;
-  overflow-x: hidden;
+/*  overflow-x: hidden;*/
+  margin:0px;
 }
 
 button{
@@ -194,9 +195,9 @@ main {
   display: flex;
   flex-direction: column;
   min-height: 95vh;
-  max-width: 840px;
+  max-width: 800px;
   margin: 0 auto;
-  padding: 20px;
+/*  padding: 20px;*/
   justify-content: center;
   box-sizing: border-box;
 }
